Removed unused files

--- a/css/tweetdrafter.css
+++ b/css/tweetdrafter.css
@@ -1,3 +1,9 @@
+/*
+	Guido Emiliano Tálamo
+	DWM2A - 2017
+	Profesor Omar Toyos
+*/
+
 @font-face{
 	font-family: quicksand;
 	src: url(../fonts/quicksand/quicksand.ttf);
