--- a/css/tweetdrafter.css
+++ b/css/tweetdrafter.css
@@ -1,9 +1,3 @@
-/*
-	Guido Emiliano Tálamo
-	DWM2A - 2017
-	Profesor Omar Toyos
-*/
-
 @font-face{
 	font-family: quicksand;
 	src: url(../fonts/quicksand/quicksand.ttf);
@@ -81,26 +75,31 @@ a { -webkit-user-select: none !important; }
 #leftpanel h1{
 	font-size: 2em;
 	text-align: center;
+	padding-bottom: 1em;
+	border-bottom: 1px solid #cccccc;
+	margin-bottom: 1em;
 }
 
-#leftpanel ul{
-	font-family: sans-serif;
-	font-size: 0.9em;
-	list-style: none;
-	font-variant: small-caps;
-	padding: 0;
+#leftpanel h2{
+	font-size: 1.2em;
+	text-decoration: none;
+	color: #222222;
+	display: block;
+	width: 100%;
 	margin: 0;
-}
-
-#leftpanel li:first-of-type{
-	border-top: 1px solid rgba(0,0,0,0.4);
-}
-
-#leftpanel li{
-	border-bottom: 1px solid rgba(0,0,0,0.4);
 	text-align: center;
-	padding: 1em 0;
-	user-select: none
+	line-height: 135%;
+}
+
+#leftpanel a{
+	margin: auto;
+	margin-top: 2em;
+	display: block;
+	width: 16vw;
+	height: 16vw;
+	background-image: url(../res/assets/gh.svg);
+	background-size: contain;
+	z-index: initial;
 }
 
 #actions{
